tests/positive/basic/repeat_basic/input.ci
void main(string[] args) {
    print(repeat("ab", 3) + "\n");
    print("[" + repeat("x", 0) + "]\n");
}
