tests/negative/runtime/substr_start_equal_len_positive/input.ci
void main() {
    print(substr("abc", 3, 1) + "\n");
}
